--- a/payload/Dockerfile
+++ b/payload/Dockerfile
@@ -4,9 +4,12 @@ FROM base as builder
 
 WORKDIR /home/node/app
 COPY package*.json ./
+COPY yarn.lock ./
+
+# Install all dependencies including devDependencies
+RUN yarn install --frozen-lockfile
 
 COPY . .
-RUN yarn install
 RUN yarn build
 
 FROM base as runtime
@@ -14,10 +17,12 @@ FROM base as runtime
 ENV NODE_ENV=production
 
 WORKDIR /home/node/app
-COPY package*.json  ./
-COPY yarn.lock ./
+COPY --from=builder /home/node/app/dist ./dist
+COPY --from=builder /home/node/app/package.json ./package.json
+COPY --from=builder /home/node/app/yarn.lock ./yarn.lock
 
-RUN yarn install --production
+# Install only production dependencies
+RUN yarn install --frozen-lockfile --production
 
 EXPOSE 3000
 
